[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stats-helper"
version = "0.1.0"
description = "A simple statistical analysis helper package for CSV datasets."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Your Name", email="you@example.com"}]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
stats-helper = "stats_helper.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["stats_helper"]
